--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,17 @@
 
 <head>
   <meta charset="utf-8" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+
+
+  <link rel="shortcut icon" href="favicon.png" type="image/png">
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <title>Dt Money</title>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
